pekingese-alioth/0.0.1/README.md
# pekingese-alioth

Generated by SUSE AI Factory

## Metadata
- **Name**: pekingese-alioth
- **Version**: 0.0.1
- **Description**: A simple description
- **Support**: opensource
- **Tier**: certified
- **Status**: new
- **Category**: Inference

## Authors
- alessandro.festa1@suse.com (Owner)

## Stack Composition
This stack includes the following components:

- **Apache Airflow** (apache-airflow): Apache Airflow is an open-source platform for programmatically authoring, scheduling, and monitoring complex workflows, primarily used for data pipelines, but also for other automated tasks like infrastructure management. (Version: )
- **** (google-gemma-3-1b-it): Inference model: google/gemma-3-1b-it (Version: )

## Installation
To install this stack on your Kubernetes cluster, ensure you have Helm installed and run:

```bash
helm upgrade --install pekingese-alioth ./chart -n pekingese-alioth --create-namespace
```

## Upgrade
To upgrade an existing installation with new values or a newer version of the chart:

```bash
helm upgrade pekingese-alioth ./chart -n pekingese-alioth
```

## Teardown
To remove the stack and all its components from your cluster:

```bash
helm uninstall pekingese-alioth -n pekingese-alioth
```
